@@ -115,6 +115,8 @@ Avro 1.6.0 (unreleased)
 
     AVRO-915. Large number of warnings in C++ builds. (thiru)
 
+    AVRO-913. CMake/C++ build should work for out-of-tree builds.  (Nebojsa Sabovic via thiru)
+
   BUG FIXES
 
     AVRO-824. Java: Fix usage message of BinaryFragmentToJsonTool.
